--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,13 +1,9 @@
-spring:
-  application:
-    name: eureka-server
-
 server:
   port: ${PORT:8761}
 
 eureka:
-  instance:
-    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
